# Epsiworld

./: CMakeLists.txt  README.md
.cache/clangd/index/: kernel.cpp.3313A2E96AF25219.idx  keyboard.cpp.1418F6090A5CCFA9.idx  keyboard.h.4B9EBD8E310E6981.idx  memory.cpp.0E7A1CCE834F8D5E.idx  memory.h.DD91AA99BDE3173A.idx  terminal.cpp.0950D3E7A12D90D7.idx  terminal.h.6CE0C38E3BE7FE4E.idx
include/: framebuffer.h  kernel.h  keyboard.h  memory.h  terminal.h
src/: epsiworld.asm  kernel_entry.asm
src/boot/: bootloader.asm  kernel_entry.asm
src/drivers/: framebuffer.cpp  keyboard.cpp  terminal.cpp
src/kernel/: kernel.cpp
src/libc/: memory.cpp
src/util/: io.asm
